| Summary: | ASTERISK-24999: PJSIP crashes with malformed contact line | ||
| Reporter: | snuffy (snuffy) | Labels: | |
| Date Opened: | 2015-04-22 19:30:10 | Date Closed: | 2015-04-23 16:04:22 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | debian 7 | Attachments: | ( 0) backtrace-24999.txt |
| Description: | If you specify a 'contact' without 'sip:' but with port it passes initial config checks but crashes when later trying to use configuration.
Example: [pjsip-aor] type=aor contact=1.2.3.4:5060 qualify_frequency=180 | ||
| Comments: | By: snuffy (snuffy) 2015-04-22 19:33:30.380-0500 backtrace By: George Joseph (gjoseph) 2015-04-22 20:15:28.384-0500 Apparently pjsip_parse_hdr allows uris without schemes if there's a :port specified. | ||